Add endpoints for voting
